# content-digest

./: README.md  install.sh
config/: telegram-channels.example.yaml  youtube-channels.example.yaml
docs/plans/: 2026-04-02-content-digest-design.md  2026-04-02-content-digest-implementation.md
skill/: content-digest.md
skills/: content-digest.md
telegram-mcp/: .env.example  .gitignore  pyproject.toml
telegram-mcp/scripts/: auth.py
telegram-mcp/telegram_mcp/: client.py  config.py  server.py
telegram-mcp/tests/: test_client.py  test_config.py  test_server.py
